--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo"><a href="">DIVINITY</a></div>
             <div class="menu">
                 <ul>
-                    <li><a href="divinity.html">Home</a></li>
+                    <li><a href="https://krishnadafaa.github.io/Divinity.github.io/">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="members.html">Members</a></li>
                     <li><a href="contact.html">Contact</a></li>
